kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp
  namespace: java-webapp
  labels:
    app: java-webapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-webapp

  template:
    metadata:
      labels:
        app: java-webapp

    spec:
      containers:
        - name: java-webapp
          image: 428847003845.dkr.ecr.ap-south-1.amazonaws.com/java-webapp:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
