kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: java-webapp

spec:
  selector:
    app: nginx-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
