kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp-service
  namespace: java-webapp

spec:
  type: ClusterIP

  selector:
    app: java-webapp

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
